# Synaptrix

./: Cargo.toml  README.md  build.rs  install-icons.sh  logo script.sh  synaptrix.desktop  uninstall-icons.sh
debian/: postinst  postrm  prerm
releases/v0.0.2-alpha/: synaptrix
src/: app_info.rs  main.rs  settings.rs  utils.rs
src/app_launcher/: app_launcher.rs  desktop_parser.rs  file_loader.rs  keyboard.rs  mod.rs  search.rs  styles.rs  ui.rs
