[package]
name = "synaptrix"
version = "0.0.2-alpha"
edition = "2021"

[dependencies]
gtk = { version = "0.7", package = "gtk4" }
md5 = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde_yaml = "0.9"
tempfile = "3.20.0"
